Modified var names in AngularJS

--- a/public/index.html
+++ b/public/index.html
@@ -69,9 +69,9 @@
 			<p>Read the <a href="http://scotch.io/tutorials/javascript/creating-a-single-page-todo-app-with-node-and-angular">tutorial</a>.</p>
 		</div>
 		-->
-		<div ng-controller="SalesController">
+		<div ng-controller="TemperatureController">
 		  <h1>Today's Temp Chart</h1>
-		  <div linear-chart chart-data="salesData"></div>
+		  <div linear-chart chart-data="temperatureData"></div>
 		</div>
 	</div>
 
