--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 	<!-- SCROLLS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
-  	<link rel="stylesheet" href="styles.css"><!-- load bootstrap -->
+  	<link rel="stylesheet" href="styles_c3.css"><!-- load bootstrap -->
 	<style>
 		html 					{ overflow-y:scroll; }
 		body 					{ padding-top:50px; }
@@ -22,7 +22,9 @@
 	<!-- SPELLS -->
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.js"></script>
 	<script src="core.js"></script>
+
 
 </head>
 <!-- SET THE CONTROLLER AND GET ALL TODOS WITH INITIALIZE FUNCTION -->
@@ -70,10 +72,17 @@
 			<p>Read the <a href="http://scotch.io/tutorials/javascript/creating-a-single-page-todo-app-with-node-and-angular">tutorial</a>.</p>
 		</div>
 		-->
+<!--
 		<div ng-controller="TemperatureController">
 		  <h1>Today's Temp Chart</h1>
 		  <div linear-chart chart-data="temperatureData"></div>
 		</div>
+-->
+        <div ng-controller="TemperatureController">
+        <div id="chart">    
+            <script src="c3chart.js"></script>
+        </div>
+            </div>
 	</div>
 
 </body>
