--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 			<h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
 		</div>
 
-		<!-- TODO LIST -->
+        <!-- TODO LIST -->
 		<div id="todo-list" class="row">
 			<div class="col-sm-4 col-sm-offset-4">
 
@@ -65,7 +65,6 @@
 				</form>
 			</div>
 		</div>
-
 		<!-- Thank you scotch!!! Tutorial was awesome!
 		<div class="text-center text-muted">
 			<p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
@@ -78,11 +77,21 @@
 		  <div linear-chart chart-data="temperatureData"></div>
 		</div>
 -->
+        <div ng-controller="TemperatureController" ng-init="drawChart()">
+        <form novalidate>
+    <p>Enter in format: val1,val2,val3,etc</p>
+    <select ng-model="type1" ng-options="typeOption for typeOption in typeOptions"></select>
+</form>
+        
+             <script src="c3chart.js"></script>
+            <div id="chart"></div>
+<!--
         <div ng-controller="TemperatureController">
         <div id="chart">    
             <script src="c3chart.js"></script>
         </div>
             </div>
+-->
 	</div>
 
 </body>
